--- a/css/projects.css
+++ b/css/projects.css
@@ -82,7 +82,7 @@
 .project-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: scale-down;
     transition: transform 0.3s ease;
 }
 
