--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body::before {
 .navbar {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -10px;
   width: 100%;
   height: var(--nav-height);
   background: rgba(26, 26, 46, 0.95);
